Agencies API: Finished ADD and DELETE routes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "agencies-manager",
+  "scripts": {
+    "start": "node server.js",
+    "server": "nodemon server.js"
+  },
   "version": "1.0.0",
   "description": "A small web application for managing agencies (CRUD)",
   "main": "server.js",
@@ -9,6 +13,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
+    "config": "^3.3.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.11.12"
   },
