--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "author": "Mohamed Hemidi",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^5.3.0",
     "config": "^3.3.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.12"
   },
   "devDependencies": {
