--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "agencies-manager",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "server": "nodemon server.js",
     "frontend" : "cd frontend && yarn start",
     "dev" : "concurrently \"yarn run start\" \"yarn run frontend\" "
   },
